--- a/test.html
+++ b/test.html
@@ -1,5 +1,9 @@
 <!doctype html>
 <html lang="en">
+  <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
