--- a/hw1/index.html
+++ b/hw1/index.html
@@ -65,7 +65,7 @@
 			<p>
 				<span>標準配置：</span>
 
-				手機、電池、充電器、資料線、高傳真耳機、包裝（高清晰保護膜已貼附螢幕）
+				手機、電池、充電器、資料線、高傳真耳機、包裝（高清晰保護膜已貼附螢幕)
 			</p>	
 		</section>
 	</div>
