--- a/hw3-course/index.html
+++ b/hw3-course/index.html
@@ -5,6 +5,7 @@
   <title>GrabikonDesign</title>
   <link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="stylesheets/styles.css">
+  <link rel="stylesheet" href="stylesheets/font.css">
 </head>
 <body>
   <header class="gd-header text-center" data-spy="affix" data-offset-top="69">
@@ -22,14 +23,15 @@
     </ul>
   </header>
 
-  <div class="jumbotron gd-jumbotron">
-    <h2 class="text-center">
+  <div class="jumbotron gd-jumbotron text-center">
+    <h2>
       <span>FULLSERVICE WERBEAGENTUR</span>
       <br>
       <span>AUS BONN</span>
     </h2>
   </div>
 
+  <div class="container">
     <div class="page-header">
       <h1 id="agentur">WER WIR SIND<br><small>FULLSERVICE WERBEAGENTUR AUS BONN</small></h1>
     </div>
@@ -57,114 +59,115 @@
         <dt>HTML5</dt>
         <dd>
           <div class="progress progress-striped">
-           <div class="progress-bar" style="width: 56%;"></div>
-         </div>
-       </dd>
-       <dt>JavaScript</dt>
-       <dd>
-        <div class="progress progress-striped">
-         <div class="progress-bar" style="width: 40%;"></div>
-       </div>
-     </dd>
-     <dt>CSS3</dt>
-     <dd>
-      <div class="progress progress-striped">
-       <div class="progress-bar" style="width: 60%;"></div>
-     </div>
-   </dd>
-   <dt>Wordpress Development</dt>
-   <dd>
-    <div class="progress progress-striped">
-     <div class="progress-bar" style="width: 80%;"></div>
-   </div>
- </dd>
-</dl>
-</div>
-</div>
-
-<div class="well">
-  <div class="container">
-    <a href="#" class="btn btn-large btn-danger pull-right">ANGRAGE STELLEN</a>
-    <h3>Sie benötigen hilfe?</h3>
-    <p>Schicken Sie uns eine Email zu und wir finden für Sie das besste heraus</p>      
-  </div>
-</div>
-
-<div class="gd-service text-center">
-  <div class="container">
-    <div class="page-header">
-      <h1 id="service">SERVICE<br><small>SEE BELOW, YOU MIGHT BE INTERESTED!</small></h1>
+             <div class="progress-bar" style="width: 56%;"></div>
+           </div>
+        </dd>
+        <dt>JavaScript</dt>
+        <dd>
+          <div class="progress progress-striped">
+             <div class="progress-bar" style="width: 40%;"></div>
+           </div>
+        </dd>
+        <dt>CSS3</dt>
+        <dd>
+          <div class="progress progress-striped">
+             <div class="progress-bar" style="width: 60%;"></div>
+           </div>
+        </dd>
+        <dt>Wordpress Development</dt>
+        <dd>
+          <div class="progress progress-striped">
+             <div class="progress-bar" style="width: 80%;"></div>
+           </div>
+        </dd>
+      </dl>
     </div>
-    <div class="row">
-      <div class="col-md-4">
-        <div class="well">
-          <i class="icon-screen"></i>
-          <h3>Web Development</h3>
-          <p>Wir gestalten Ihren Webauftritt auf dem höchsten Niveau. Natürlich auch gestalterisch und technisch angepasst für mobile Geräte, im sogenannten Responsive Design. Als Kunde haben Sie die Möglichkeit die Website, die Inhalte Ihres Webauftrittes selbst zu vewalten. Wir empfehlen die Content Managment Systeme Joomla, Drupal, Typo3 und WordPress. Wir sorgen dafür, dass die Website in jedem Browser fehlerfrei angezeigt wird.</p>
+  
 
-          <a href="#" class="btn btn-danger">ANGRAGE STELLEN</a>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="well">
-          <i class="icon-earth"></i>
-          <h3>Website SEO</h3>
-          <p>Wir optimieren professionell und nachhaltig Webseiten für Google. Dabei wird Ihre Adresse zum Beispiel in die wichtigsten Online- und Printverzeichnisse eingetragen. Wir sorgen dafür, dass Ihr Auftritt ständig auf den neuesten Stand mit den neuesten Technologien bleibt. Unsere PR-Maßnahmen runden als Werbung für Webseiten die Leistungen ab.</p>
-
-          <a href="#" class="btn btn-danger">ANGRAGE STELLEN</a>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="well">
-          <i class="icon-quill"></i>
-          <h3>Branding</h3>
-          <p>Im Printbereich sind wir als Ihr wachsames Auge für Werbung aktiv. Ob es um Visitenkarten, Katalogen, Broschüren oder andere Drucksachen geht – mit der Kompetenz von GrafikonDesign glänzt Ihr Material die richtige Zielgruppe an. Fragen Sie nach unseren speziellen, aktuellen Angeboten und Leistungen.</p>
-
-          <a href="#" class="btn btn-danger">ANGRAGE STELLEN</a>
-        </div>
-      </div>
+    <div class="well">
+      <a href="#" class="btn btn-large btn-danger pull-right">ANGRAGE STELLEN</a>
+      <h3>Sie benötigen hilfe?</h3>
+      <p>Schicken Sie uns eine Email zu und wir finden für Sie das besste heraus</p>      
     </div>
   </div>
-</div>
 
-<div class="gd-contact">
-  <div>
-    <h3 id="contact">KONTAKT</h3>
-    <p>
-      Ansprechpartner: <br>
-      Herr Onopchenko <br>
-      Tel: +49 (228) 96 16 03 21 <br>
-      Email: info@grafikondesign.de <br>
-    </p>
+
+  <div class="gd-service text-center">
+    <div class="container">
+      <div class="page-header">
+        <h1 id="service">SERVICE<br><small>SEE BELOW, YOU MIGHT BE INTERESTED!</small></h1>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="well">
+            <i class="icon-screen"></i>
+            <h3>Web Development</h3>
+            <p>Wir gestalten Ihren Webauftritt auf dem höchsten Niveau. Natürlich auch gestalterisch und technisch angepasst für mobile Geräte, im sogenannten Responsive Design. Als Kunde haben Sie die Möglichkeit die Website, die Inhalte Ihres Webauftrittes selbst zu vewalten. Wir empfehlen die Content Managment Systeme Joomla, Drupal, Typo3 und WordPress. Wir sorgen dafür, dass die Website in jedem Browser fehlerfrei angezeigt wird.</p>
+
+            <a href="#" class="btn btn-danger">ANGRAGE STELLEN</a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="well">
+            <i class="icon-earth"></i>
+            <h3>Website SEO</h3>
+            <p>Wir optimieren professionell und nachhaltig Webseiten für Google. Dabei wird Ihre Adresse zum Beispiel in die wichtigsten Online- und Printverzeichnisse eingetragen. Wir sorgen dafür, dass Ihr Auftritt ständig auf den neuesten Stand mit den neuesten Technologien bleibt. Unsere PR-Maßnahmen runden als Werbung für Webseiten die Leistungen ab.</p>
+
+            <a href="#" class="btn btn-danger">ANGRAGE STELLEN</a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="well">
+            <i class="icon-quill"></i>
+            <h3>Branding</h3>
+            <p>Im Printbereich sind wir als Ihr wachsames Auge für Werbung aktiv. Ob es um Visitenkarten, Katalogen, Broschüren oder andere Drucksachen geht – mit der Kompetenz von GrafikonDesign glänzt Ihr Material die richtige Zielgruppe an. Fragen Sie nach unseren speziellen, aktuellen Angeboten und Leistungen.</p>
+
+            <a href="#" class="btn btn-danger">ANGRAGE STELLEN</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div>
-    <div id="map-canvas"></div>
+
+
+  <div class="gd-contact">
+    <div>
+      <h3 id="contact">KONTAKT</h3>
+      <p>
+        Ansprechpartner: <br>
+        Herr Onopchenko <br>
+        Tel: +49 (228) 96 16 03 21 <br>
+        Email: info@grafikondesign.de <br>
+      </p>
+    </div>
+    <div>
+      <div id="map-canvas"></div>
+    </div>
   </div>
-</div>
 
-<script type="text/javascript" src="javascripts/jquery.min.js"></script>
-<script type="text/javascript" src="javascripts/bootstrap/affix.js"></script>
+  <script type="text/javascript" src="javascripts/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/bootstrap/affix.js"></script>
 
-<!-- https://developers.google.com/maps/tutorials/fundamentals/adding-a-google-map -->
-<script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-<script>
-google.maps.event.addDomListener(window, 'load', function(){
-  var mapCanvas = document.getElementById('map-canvas');
-  var mapOptions = {
-    center: new google.maps.LatLng(25.019283, 121.541565),
-    zoom: 16,
-    mapTypeId: google.maps.MapTypeId.ROADMAP
-  }
-  var map = new google.maps.Map(mapCanvas, mapOptions);
-  map.set('styles', [{
-    "stylers": [
-    { "visibility": "simplified" },
-    { "lightness": -2 },
-    { "saturation": -100 }
-    ]
-  }
-  ]);
-});
-</script>
+  <!-- https://developers.google.com/maps/tutorials/fundamentals/adding-a-google-map -->
+  <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+  <script>
+    google.maps.event.addDomListener(window, 'load', function(){
+      var mapCanvas = document.getElementById('map-canvas');
+      var mapOptions = {
+        center: new google.maps.LatLng(25.019283, 121.541565),
+        zoom: 16,
+        mapTypeId: google.maps.MapTypeId.ROADMAP
+      }
+      var map = new google.maps.Map(mapCanvas, mapOptions);
+      map.set('styles', [{
+          "stylers": [
+            { "visibility": "simplified" },
+            { "lightness": -2 },
+            { "saturation": -100 }
+          ]
+        }
+      ]);
+    });
+  </script>
 </body>
 </html>
