--- a/hw4-course/index.html
+++ b/hw4-course/index.html
@@ -18,6 +18,7 @@
     <hr>
     <footer>
       <p>資訊系統訓練班 232 期 Ajax &amp; Facebook 練習作業</p>
+      <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fben92316.github.io%2FHTM23317%2Fhw4-course%2Findex.html&amp;width&amp;layout=standard&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=80&amp;appId=1396656527241185" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:80px;" allowTransparency="true"></iframe>
       <p>垃圾社團清單來源：<a href="http://spamgroup.tonyq.org/groups/json">Facebook 廣告社團檢查器 API</a></p>
     </footer>
   </div>
